Fix responsive triggers overlap issue
The min and max width triggers have the same values,
which caused the style resolution to take an intersection of
both style declarations when the screen resolution had the size
of the limts (say 1280px), causing an odd behaviour and look.

--- a/haddock-api/resources/html/NewOcean.std-theme/new-ocean.css
+++ b/haddock-api/resources/html/NewOcean.std-theme/new-ocean.css
@@ -73,7 +73,7 @@ body.js-enabled .hide-when-js-enabled {
 
 @media only screen and (min-width: 1280px) {
   #content {
-    width: 70vw;
+    width: 63vw;
     max-width: 1450px;
   }
 
@@ -104,7 +104,7 @@ body.js-enabled .hide-when-js-enabled {
 
 }
 
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 1279px) {
   #content {
     width: 80vw;
   }
@@ -119,7 +119,7 @@ body.js-enabled .hide-when-js-enabled {
   }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 999px) {
   #content {
     width: 93vw;
   }
@@ -158,7 +158,7 @@ Display the package name on top of the menu links and center both elements:
                   The package name
               Source . Contents . Index
 */
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 999px) {
   #package-header .caption {
     display: block;
     margin: 4px 0;
